@@ -1,4 +1,7 @@
 2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
+	* changer-src/chg-zd-mtx.sh.in: Check if MT and MTX exists.
+
+2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-zd-mtx.sh.in: Set CHANGER environment variable.
 
 2007-01-24  Jean-Louis Martineau <martineau@zmanda.com>
